--- a/autisten-info-nuxt/package.json
+++ b/autisten-info-nuxt/package.json
@@ -14,5 +14,8 @@
     "nuxt": "^3.12.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
+  },
+  "devDependencies": {
+    "@nuxthq/studio": "^2.0.1"
   }
 }
