--- a/autisten-info-nuxt/package.json
+++ b/autisten-info-nuxt/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.13.0",
+    "@nuxt/image": "^1.7.0",
     "nuxt": "^3.12.2",
+    "vidbg.js": "^2.1.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
